--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,10 @@
 .app.dark{
   --bg-color: #000817;
+  --inverted-bg-color: #eaeaea;
 
   --primary-color: #03c706;
-  --secondary-color: #44ff5d
+  --secondary-color: #44ff5d;
+
+  --inverted-primary-color: #be6c00;
+  --inverted-secondary-color: #da800b;
 }
