--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,10 @@
 .app.light{
   --bg-color: #eaeaea;
+  --inverted-bg-color: #000817;
 
   --primary-color: #be6c00;
-  --secondary-color: #da800b
+  --secondary-color: #da800b;
+
+  --inverted-primary-color: #03c706;
+  --inverted-secondary-color: #44ff5d
 }
