--- a/src/widgets/navbar/ui/Navbar.module.scss
+++ b/src/widgets/navbar/ui/Navbar.module.scss
@@ -1,18 +1,18 @@
 .Navbar {
-  width: 100%;
-  height: var(--navbar-height);
-  background-color: var(--inverted-bg-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+    width: 100%;
+    height: var(--navbar-height);
+    background-color: var(--inverted-bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 .links {
-
+    color: var(--primary-color);
 }
 
 .mainLink {
-  margin-right: 15px;
+    margin-right: 15px;
 }
 
