--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,11 +1,18 @@
 .Button {
-    cursor: pointer;
-    color: var(--primary-color);
+  cursor: pointer;
+  color: var(--primary-color);
 }
 
 .clear {
-    padding: 0;
-    border: none;
-    outline: none;
-    background: none;
+  padding: 0;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.outline {
+  padding: 10px 15px;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  background: none;
 }
