--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -4,7 +4,5 @@
     --primary-color: #be6c00;
     --secondary-color: #da800b;
     --inverted-primary-color: #03c706;
-    --inverted-secondary-color:
-        #44ff5d
-;
+    --inverted-secondary-color: #44ff5d;
 }
