--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .Button {
     cursor: pointer;
     color: var(--primary-color);
+    padding: 5px 14px;
 }
 
 .clear {
@@ -11,8 +12,50 @@
 }
 
 .outline {
-    padding: 10px 15px;
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
     background: none;
+}
+
+.background {
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border: none;
+}
+
+.backgroundInverted {
+    background: var(--inverted-bg-color);
+    color: var(--inverted-primary-color);
+    border: none;
+}
+
+.square {
+    padding: 0;
+}
+
+.square.size_m {
+    height: var(--font-line-m);
+    width: var(--font-line-m);
+}
+
+.square.size_l {
+    height: var(--font-line-l);
+    width: var(--font-line-l);
+}
+
+.square.size_xl {
+    height: var(--font-line-xl);
+    width: var(--font-line-xl);
+}
+
+.size_m {
+    font-size: var(--font-size-m);
+}
+
+.size_l {
+    font-size: var(--font-size-l);
+}
+
+.size_xl {
+    font-size: var(--font-size-xl);
 }
