--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,7 +9,8 @@ body {
 }
 
 .app {
-    background-color: var(--bg-color);
+    color: var(--primary-color);
+    background: var(--bg-color);
     min-height: 100vh;
 }
 
