--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -4,10 +4,20 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: -1;
-    pointer-events: none;
     opacity: 0;
+    pointer-events: none;
+    z-index: -1;
     color: var(--primary-color);
+}
+
+.Modal.dark {
+    --bg-color: #090949;
+    --primary-color: #04ff04;
+}
+
+.Modal.light {
+    --bg-color: #eaeaea;
+    --primary-color: #be6c00;
 }
 
 .overlay {
@@ -29,8 +39,8 @@
 }
 
 .opened {
-    opacity: 1;
     pointer-events: auto;
+    opacity: 1;
     z-index: var(--modal-z-index);
 
     .content {
